File Validation Imrovements

--- a/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
+++ b/src/Churchee.Module.Site/Areas/Site/Pages/Media/Index.razor
@@ -235,7 +235,7 @@
         .SetDescription(createModel.Description)
         .SetAdditionalContent(createModel.AdditionalContent)
         .SetFolderId(activeFolderId)
-        .SetBase64Image(createModel.File.Value)
+        .SetBase64Content(createModel.File.Value)
         .SetLinkUrl(createModel.LinkUrl)
         .SetCssClass(createModel.CssClass)
         .SetOrder(createModel.Order)
