--- a/src/Churchee.Module.UI/Components/FormFields.razor
+++ b/src/Churchee.Module.UI/Components/FormFields.razor
@@ -207,6 +207,7 @@
                                     <RadzenHtmlEditorBackground />
                                     <RadzenHtmlEditorRemoveFormat />
                                     <RadzenHtmlEditorSource />
+                                    <RadzenHtmlEditorLink />
                                 </RadzenHtmlEditor>
                             }
 
